--- a/deepdream_combined_subject_pupil_size.Rmd
+++ b/deepdream_combined_subject_pupil_size.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "DeepDream - Subject 2 Physiological Analysis"
+title: "DeepDream - Subjects Combined Eye-Tracking Data Analysis"
 author:    |
     | Colin Ayres  
     | c.ayres@student.uw.edu.pl
