--- a/deepdream_combined_heart.Rmd
+++ b/deepdream_combined_heart.Rmd
@@ -26,6 +26,7 @@ library(mgcv)
 library(ggpubr)
 library(rstatix)
 library(readr)
+library(gridExtra)
 
 # Set working directory
 mds_dir <- here::here()
@@ -439,25 +440,26 @@ plot_individual_paired_comparisons <- function(data, ttest_results, metric = "me
 }
 
 # Generate individual plots for mean heart rate
-meanhr_plots <- plot_individual_paired_comparisons(
+meanhr_plots_ttest <- plot_individual_paired_comparisons(
   data = linked_results,
   ttest_results = paired_ttest_results,
   metric = "mean_heart_rate"
 )
 
 # Generate individual plots for heart rate variability
-hrv_plots <- plot_individual_paired_comparisons(
+hrv_plots_ttest <- plot_individual_paired_comparisons(
   data = linked_results,
   ttest_results = paired_ttest_results,
   metric = "heart_rate_variability"
 )
 
 # Print all plots
-walk(names(meanhr_plots), ~print(meanhr_plots[[.x]]))
-walk(names(hrv_plots), ~print(hrv_plots[[.x]]))
+walk(names(meanhr_plots_ttest), ~print(meanhr_plots[[.x]]))
+walk(names(hrv_plots_ttest), ~print(hrv_plots[[.x]]))
 
 ```
-## Plot R-R For All Subjects/Conditions
+
+## Plot HR and R-R For All Subjects/Conditions
 
 ```{r}
 # Join the mapping with filtered_exp to sync conditions
@@ -466,7 +468,7 @@ filtered_exp_synced <- filtered_exp %>%
   filter(!is.na(`Clean R-R`))  # Remove NA values
 
 # Plotting function
-create_subject_plot <- function(subject_data) {
+create_subject_plot_rr <- function(subject_data) {
   ggplot(subject_data, aes(x = Time, y = `Clean R-R`)) +
     geom_line(color = "#2c7bb6", linewidth = 0.4) +
     facet_wrap(~ Condition_Order, nrow = 2, ncol = 2, scales = "free_x") +
@@ -485,67 +487,124 @@ create_subject_plot <- function(subject_data) {
     )
 }
 
-# Split data by subject and create plots
-subject_plots <- filtered_exp_synced %>%
-  group_split(Id) %>%
-  map(create_subject_plot)
-
-# View all plots
-walk(subject_plots, print) 
-
-
-
-```
-## Identifying Outliers
-
-```{r}
-
-
-
-mad_score <- function(x, threshold = 3.5) {
-  median_x <- median(x)
-  mad_x <- mad(x)
-  z_scores <- abs(x - median_x) / mad_x
-  return(z_scores > threshold)
-}
-
-# Add MAD outliers and thresholds to data
-filtered_exp_annotated <- filtered_exp_synced %>%
-  group_by(Id, Condition_Order) %>%
-  mutate(
-    median_rr = median(`Clean R-R`, na.rm = TRUE),
-    mad_threshold = 3.5 * mad(`Clean R-R`, na.rm = TRUE),
-    is_outlier = mad_score(`Clean R-R`, threshold = 3.5)
-  ) %>%
-  ungroup()
-
-# Modified plotting function with outlier visualization
-create_subject_plot <- function(subject_data) {
-  # Get outlier counts per condition
-  outlier_counts <- subject_data %>%
-    group_by(Condition_Order) %>%
-    summarise(outlier_count = sum(is_outlier, na.rm = TRUE))
-  
-  ggplot(subject_data, aes(x = Time, y = `Clean R-R`)) +
-    geom_line(color = "gray60", linewidth = 0.3) +
-    geom_point(data = ~ filter(.x, is_outlier), 
-               color = "red", size = 0.8, alpha = 0.7) +
-    geom_hline(aes(yintercept = median_rr), 
-               color = "blue", linetype = "dashed", linewidth = 0.3) +
-    geom_hline(aes(yintercept = median_rr + mad_threshold), 
-               color = "darkgreen", linetype = "dotted", linewidth = 0.3) +
-    geom_hline(aes(yintercept = median_rr - mad_threshold), 
-               color = "darkgreen", linetype = "dotted", linewidth = 0.3) +
-    geom_text(data = outlier_counts,
-              aes(x = -Inf, y = Inf, 
-                  label = paste("Outliers:", outlier_count)),
-              hjust = -0.1, vjust = 1.5, size = 2.5, color = "red") +
+create_subject_plot_hr <- function(subject_data) {
+  ggplot(subject_data, aes(x = Time, y = `Heart Rate`)) +
+    geom_line(color = "#2c7bb6", linewidth = 0.4) +
     facet_wrap(~ Condition_Order, nrow = 2, ncol = 2, scales = "free_x") +
     labs(
       title = paste("Subject", unique(subject_data$Id)),
       x = "Time (s)",
-      y = "R-R Interval (ms)",
-      caption = "Blue dashed: Median | Green dotted: MAD thresholds"
+      y = "Heart Rate (bpm)"
+    ) +
+    theme_minimal() +
+    theme(
+      strip.background = element_rect(fill = "#f5f5f5"),
+      strip.text = element_text(size = 8, face = "bold"),
+      axis.text = element_text(size = 6),
+      plot.title = element_text(size = 10, hjust = 0.5),
+      panel.spacing = unit(0.3, "cm")
+    )
+}
+
+# Split data by subject and create plots
+hrv_subject_plots <- filtered_exp_synced %>%
+  group_split(Id) %>%
+  map(create_subject_plot_rr)
+
+hr_subject_plots <- filtered_exp_synced %>%
+  group_split(Id) %>%
+  map(create_subject_plot_hr)
+
+# View all plots
+walk(hr_subject_plots, print) 
+walk(hrv_subject_plots, print) 
+
+```
+## Identifying Outliers for HR and HRV
+
+```{r}
+# Old function which used MAD Threshold to identify outliers
+#analyze_metric_outliers <- function(data, metric_col, threshold = 3.5) {
+#  data %>%
+#    group_by(Id, Condition_Order) %>%
+#    mutate(
+#      median_val = median(!!sym(metric_col), na.rm = TRUE),
+#      mad_threshold = threshold * mad(!!sym(metric_col), na.rm = TRUE),
+#      is_outlier = abs(!!sym(metric_col) - median_val) / mad(!!sym(metric_col), na.rm = TRUE) > threshold
+#    ) %>%
+#    ungroup()
+#}
+
+# 50% average threshold to identify outliers
+analyze_metric_outliers <- function(data, metric_col) {
+  data %>%
+    group_by(Id, Condition_Order) %>%
+    mutate(
+      avg_val = mean(!!sym(metric_col), na.rm = TRUE),
+      lower_threshold = 0.5 * avg_val,  # 50% below average
+      upper_threshold = 1.5 * avg_val,  # 50% above average
+      is_outlier = (!!sym(metric_col) < lower_threshold) | (!!sym(metric_col) > upper_threshold)
+    ) %>%
+    ungroup()
+}
+
+# Process both metrics
+filtered_exp_annotated <- filtered_exp_synced %>%
+  analyze_metric_outliers("Clean R-R") %>%  # For HRV (R-R)
+  rename(
+    avg_rr = avg_val,
+    lower_threshold_rr = lower_threshold,
+    upper_threshold_rr = upper_threshold,
+    is_outlier_rr = is_outlier
+  ) %>%
+  analyze_metric_outliers("Heart Rate") %>%  # For HR
+  rename(
+    avg_hr = avg_val,
+    lower_threshold_hr = lower_threshold,
+    upper_threshold_hr = upper_threshold,
+    is_outlier_hr = is_outlier
+  )
+
+create_metric_plot <- function(subject_data, metric, y_label) {
+  metric_sym <- sym(metric)
+  prefix <- ifelse(metric == "Clean R-R", "rr", "hr")
+  
+  outlier_counts <- subject_data %>%
+    group_by(Condition_Order) %>%
+    summarise(outlier_count = sum(!!sym(paste0("is_outlier_", prefix)), na.rm = TRUE), .groups = "drop")
+  
+  ggplot(subject_data, aes(x = Time, y = !!metric_sym)) +
+    geom_line(color = "gray60", linewidth = 0.3) +
+    geom_point(
+      data = ~ filter(.x, !!sym(paste0("is_outlier_", prefix))), 
+      color = "red", size = 0.8, alpha = 0.7
+    ) +
+    geom_hline(
+      aes(yintercept = !!sym(paste0("avg_", prefix))), 
+      color = "blue", linetype = "dashed", linewidth = 0.3
+    ) +
+    geom_hline(
+      aes(yintercept = !!sym(paste0("upper_threshold_", prefix))), 
+      color = "darkgreen", linetype = "dotted", linewidth = 0.3
+    ) +
+    geom_hline(
+      aes(yintercept = !!sym(paste0("lower_threshold_", prefix))), 
+      color = "darkgreen", linetype = "dotted", linewidth = 0.3
+    ) +
+    geom_text(
+      data = outlier_counts,
+      aes(x = -Inf, y = Inf, label = paste("Outliers:", outlier_count)),
+      hjust = -0.1, 
+      vjust = 1.5, 
+      size = 2.5, 
+      color = "red"
+    ) +
+    facet_wrap(~ Condition_Order, nrow = 2, ncol = 2, scales = "free_x") +
+    labs(
+      title = paste("Subject", unique(subject_data$Id), "-", y_label),
+      x = "Time (s)",
+      y = y_label,
+      caption = "Blue dashed: Average | Green dotted: 50% Thresholds"
     ) +
     theme_minimal() +
     theme(
@@ -555,25 +614,237 @@ create_subject_plot <- function(subject_data) {
     )
 }
 
-# Create and save all plots with outliers marked
-subject_plots <- filtered_exp_annotated %>%
+# Create and save plots for both metrics
+outlier_subject_plots_hrv <- filtered_exp_annotated %>%
   group_split(Id) %>%
-  map(create_subject_plot)
+  map(~ create_metric_plot(.x, "Clean R-R", "R-R Interval (ms)"))
 
-# Print all plots (use arrow buttons in RStudio to navigate)
-walk(subject_plots, print)
+outlier_subject_plots_hr <- filtered_exp_annotated %>%
+  group_split(Id) %>%
+  map(~ create_metric_plot(.x, "Heart Rate", "Heart Rate (bpm)"))
 
-# Get tabular summary of outlier counts
+# Print HR plots
+walk(outlier_subject_plots_hr, print)
+
+# Print HRV plots
+walk(outlier_subject_plots_hrv, print)
+
+# Combined summary
 outlier_summary <- filtered_exp_annotated %>%
   group_by(Id, Condition_Order) %>%
   summarise(
     total_points = n(),
-    outlier_count = sum(is_outlier, na.rm = TRUE),
+    hr_outliers = sum(is_outlier_hr, na.rm = TRUE),
+    hrv_outliers = sum(is_outlier_rr, na.rm = TRUE),
     .groups = "drop"
   )
 
-# View the outlier counts
+# View combined outliers results
 print(outlier_summary)
+
+
+```
+
+## Re-plotting HR and HRV without Outliers
+
+```{r}
+# Process data with outlier replacement for both metrics
+filtered_exp_cleaned <- filtered_exp_synced %>%
+  group_by(Id, Condition_Order) %>%
+  mutate(
+    # HRV (R-R) calculations
+    avg_rr = mean(`Clean R-R`, na.rm = TRUE),
+    lower_threshold_rr = 0.5 * avg_rr,
+    upper_threshold_rr = 1.5 * avg_rr,
+    is_outlier_rr = (`Clean R-R` < lower_threshold_rr) | (`Clean R-R` > upper_threshold_rr),
+    Clean_RR_Filtered = ifelse(is_outlier_rr, NA, `Clean R-R`),
+    
+    # HR calculations
+    avg_hr = mean(`Heart Rate`, na.rm = TRUE),
+    lower_threshold_hr = 0.5 * avg_hr,
+    upper_threshold_hr = 1.5 * avg_hr,
+    is_outlier_hr = (`Heart Rate` < lower_threshold_hr) | (`Heart Rate` > upper_threshold_hr),
+    Heart_Rate_Filtered = ifelse(is_outlier_hr, NA, `Heart Rate`)
+  ) %>%
+  ungroup()
+
+
+create_subject_plot <- function(subject_data, metric = c("HRV", "HR")) {
+  metric <- match.arg(metric)
+  
+  if (metric == "HRV") {
+    y_var <- sym("Clean_RR_Filtered")
+    avg_var <- "avg_rr"
+    lower_threshold_var <- "lower_threshold_rr"
+    upper_threshold_var <- "upper_threshold_rr"
+    y_label <- "Filtered R-R Interval (ms)"
+    outlier_var <- "is_outlier_rr"
+  } else {
+    y_var <- sym("Heart_Rate_Filtered")
+    avg_var <- "avg_hr"
+    lower_threshold_var <- "lower_threshold_hr"
+    upper_threshold_var <- "upper_threshold_hr"
+    y_label <- "Filtered Heart Rate (bpm)"
+    outlier_var <- "is_outlier_hr"
+  }
+  
+  # Prepare threshold and outlier data
+  threshold_data <- subject_data %>%
+    group_by(Condition_Order) %>%
+    summarise(
+      avg_val = first(!!sym(avg_var)),
+      upper_threshold = first(!!sym(upper_threshold_var)),
+      lower_threshold = first(!!sym(lower_threshold_var)),
+      .groups = "drop"
+    )
+  
+  outlier_counts <- subject_data %>%
+    group_by(Condition_Order) %>%
+    summarise(outlier_count = sum(!!sym(outlier_var), na.rm = TRUE), .groups = "drop")
+  
+  # Create the plot
+  ggplot(subject_data, aes(x = Time, y = !!y_var)) +
+    geom_line(color = "#1f77b4", linewidth = 0.4) +
+    geom_hline(
+      data = threshold_data,
+      aes(yintercept = avg_val),
+      color = "blue", 
+      linetype = "dashed", 
+      linewidth = 0.3
+    ) +
+    geom_hline(
+      data = threshold_data,
+      aes(yintercept = upper_threshold),
+      color = "darkgreen", 
+      linetype = "dotted", 
+      linewidth = 0.3
+    ) +
+    geom_hline(
+      data = threshold_data,
+      aes(yintercept = lower_threshold),
+      color = "darkgreen", 
+      linetype = "dotted", 
+      linewidth = 0.3
+    ) +
+    geom_text(
+      data = outlier_counts,
+      aes(x = Inf, y = Inf, label = paste("Outliers Removed:", outlier_count)),
+      hjust = 1.1, 
+      vjust = 1.5, 
+      size = 3, 
+      color = "red"
+    ) +
+    facet_wrap(~ Condition_Order, nrow = 2, ncol = 2, scales = "free_x") +
+    labs(
+      title = paste("Subject", unique(subject_data$Id), "-", metric),
+      x = "Time (s)",
+      y = y_label,
+      caption = "Blue dashed: Average | Green dotted: 50% Thresholds"
+    ) +
+    theme_minimal()
+}
+
+
+# Generate and view plots for both metrics
+hr_plots_no_outlier <- filtered_exp_cleaned %>%
+  group_split(Id) %>%
+  map(~ create_subject_plot(.x, "HR"))
+
+hrv_plots_no_outlier <- filtered_exp_cleaned %>%
+  group_split(Id) %>%
+  map(~ create_subject_plot(.x, "HRV"))
+
+# Print HR plots
+walk(hr_plots_no_outlier, print)
+
+# Print HRV plots
+walk(hrv_plots_no_outlier, print)
+
+# View outlier summary table
+print(outlier_summary)
+
+```
+
+# Re-doing T-Tests without Outliers
+
+```{r}
+# Calculate metrics using FILTERED DATA
+results_filtered <- filtered_exp_cleaned %>%
+  filter(Id %in% 1:14, section_id %in% 1:4) %>%
+  group_by(Id, section_id) %>%
+  arrange(Time) %>%
+  summarise(
+    # Use filtered heart rate (outliers replaced with NA)
+    mean_heart_rate = mean(Heart_Rate_Filtered, na.rm = TRUE),
+    
+    # HRV calculation using filtered RR intervals
+    heart_rate_variability = {
+      clean_rr <- na.omit(Clean_RR_Filtered)
+      if (length(clean_rr) >= 2) {
+        sqrt(mean(diff(clean_rr)^2))  # RMSSD calculation
+      } else {
+        NA_real_
+      }
+    },
+    .groups = "drop"
+  ) %>%
+  mutate(
+    mean_heart_rate = ifelse(is.nan(mean_heart_rate), NA, mean_heart_rate)
+  )
+
+# View results sorted by Id and section
+results_filtered %>% arrange(Id, section_id)
+
+# Join results table with the condensed data to include condition names
+linked_results_filtered <- results_filtered %>%
+  left_join(processed_questions_combined, by = c("Id" = "Id", "section_id" = "Order_Number"))
+
+paired_ttest_results_filtered <- run_all_paired_ttests(linked_results_filtered)
+
+# Generate individual plots for heart rate variability (no outliers)
+ttest_hrv_plots_no_outliers <- plot_individual_paired_comparisons(
+  data = linked_results_filtered,
+  ttest_results = paired_ttest_results_filtered,
+  metric = "heart_rate_variability"
+)
+
+# Generate individual plots for heart rate variability (no outliers)
+ttest_meanhr_plots_no_outlier <- plot_individual_paired_comparisons(
+  data = linked_results_filtered,
+  ttest_results = paired_ttest_results_filtered,
+  metric = "mean_heart_rate"
+)
+
+# Print all plots
+walk(names(meanhr_plots_no_outlier), ~print(meanhr_plots_no_outlier[[.x]]))
+walk(names(hrv_plots_no_outliers), ~print(hrv_plots_no_outliers[[.x]]))
+
+# Create PDF report
+pdf("HR_HRV_Report.pdf", width = 11, height = 8.5)  # Letter size landscape
+#plot.new()
+#print("Results")
+#grid.table(linked_results)
+#print("Results without Outliers")
+#grid.table(linked_results_filtered)
+#print("T-test Results")
+#grid.table(paired_ttest_results)
+#print("T-test Results without Outliers")
+#grid.table(paired_ttest_results_filtered)
+
+# HR plots
+walk(hr_subject_plots, print)
+walk(meanhr_plots_ttest, print)
+walk(outlier_subject_plots_hr, print)
+walk(hr_plots_no_outlier, print)
+walk(ttest_meanhr_plots_no_outlier, print)
+# HRV plots
+walk(hrv_subject_plots, print)
+walk(hrv_plots_ttest, print)
+walk(outlier_subject_plots_hrv, print)
+walk(hrv_plots_no_outlier, print)
+walk(ttest_hrv_plots_no_outliers, print)
+# Close PDF device
+dev.off()
 
 
 ```
